manifests/test-page/virtual-service-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-test
  namespace: default
spec:
  hosts:
  - "alpinresorts.online"
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: test-app-service
        port:
          number: 8080
